# Stack-ADT-Implementation

./: .gitignore  CMakeLists.txt  README.md  STACK.txt
EvaluationOfPostfix/: CMakeLists.txt  evaluatePostfix.h  main.cpp
InfixToPostfixConversion/: CMakeLists.txt  InfixToPostfixConversion.h  main.cpp
StackBalancedParentheses/: CMakeLists.txt  Source.cpp
StackBassedArray/: CMakeLists.txt
StackBassedArray/include/: StackBassedArray.h
StackBassedArray/src/: CMakeLists.txt  StackBassedArray.cpp  main.cpp
StackBassedLinkedlist/: CMakeLists.txt
StackBassedLinkedlist/include/: StackBassedLinkedlist.h
StackBassedLinkedlist/src/: CMakeLists.txt  main.cpp
